--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "build": "vite build",
+    "postinstall": "npm install --include=dev",
+    "build": "npx vite build",
     "dev": "vite",
     "preview": "vite preview"
   },
