--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,3 @@
 [build]
   command = "npm run build"
-  publish = "dist"
-  functions = "netlify/functions"
-
-[build.environment]
-  NODE_VERSION = "20"
-  NPM_VERSION = "10"
-  NPM_FLAGS = "--include=dev"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  publish = "dist"     # change to "build" only if your vite.config.js outputs to build folder
