--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "lucide-react": "0.487.0",
     "motion": "12.23.24",
     "next-themes": "0.4.6",
-    "react": ">=19.0.0",
+    "react": "^18.3.1",
     "react-day-picker": "^9.13.2",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
-    "react-dom": ">=19.0.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "7.55.0",
     "react-popper": "2.3.0",
     "react-resizable-panels": "2.1.7",
@@ -75,10 +75,6 @@
     "@vitejs/plugin-react": "4.7.0",
     "tailwindcss": "4.1.12"
   },
-  "peerDependencies": {
-    "react": ">=19.0.0",
-    "react-dom": ">=19.0.0"
-  },
   "peerDependenciesMeta": {
     "react": {
       "optional": true
@@ -89,7 +85,8 @@
   },
   "overrides": {
     "react-popper": {
-      "react": "$react"
+      "react": "$react",
+      "react-dom": "$react-dom"
     }
   },
   "pnpm": {
